Add new projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div>
         <span class="home-text">I'm</span>
         <h1 class="home-text-name">Patricio Castro</h1>
-        <span class="home-text">Full Stack Developer</span>
+        <span class="home-text">Backend Developer</span>
       </div>
     </section>
 
@@ -68,7 +68,7 @@
               <h2><b>Who am I?</b></h2>
             </div>
             <p class="about-description">
-              I am a full stack developer with 4+ years of experience designing and developing different types of solutions. I professionally specialize in Python and JavaScript, additionally I use Cloud services to deploy my projects and perform data engineering.
+              I am a backend developer with 4+ years of experience designing and developing different types of solutions. I professionally specialize in Python and JavaScript, additionally I use Cloud services to deploy my projects and perform data engineering.
             </p>
           </div>
           
@@ -115,16 +115,14 @@
         <div class="portfolio-column">
 
           <div class="portfolio-container">
-            <div>
-              <img src="assets/port01.png" class="porfolio-image">
-            </div>
+            <div><img src="assets/port01.png" class="porfolio-image"></div>
             <div class="portfolio-description">
               <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">Virtual Laser Shooting Range</h5></div>
               <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Unity - OpenCV - Python</p></div>
               <div class="portfolio-description-links">
                 <div style="width: 100%;">
                   <div class="portfolio-description-button-container">
-                    <a href="https://youtu.be/6tk3-SDVjpA" class="portfolio-description-buttons"><i class="fab fa-youtube"></i> Youtube</a>
+                    <a href="https://youtu.be/6tk3-SDVjpA" target="_blank" class="portfolio-description-buttons"><i class="fab fa-youtube"></i> Youtube</a>
                   </div>
                 </div>
               </div>
@@ -139,23 +137,85 @@
               <div class="portfolio-description-links">
                 <div style="width: 100%;">
                   <div class="portfolio-description-button-container">
-                    <a href="https://youtu.be/Ug6lXqyniPs" class="portfolio-description-buttons"><i class="fab fa-youtube"></i> Youtube</a>
+                    <a href="https://youtu.be/Ug6lXqyniPs" target="_blank" class="portfolio-description-buttons"><i class="fab fa-youtube"></i> Youtube</a>
                   </div>
                 </div>
                 <div style="width: 100%;">
                   <div class="portfolio-description-button-container">
-                    <a href="https://github.com/pccastros/telegram-bot-python.git" class="portfolio-description-buttons"><i class="fab fa-github" style="color: white;"></i> Repository</a>
+                    <a href="https://github.com/pccastros/telegram-bot-python.git" target="_blank" class="portfolio-description-buttons"><i class="fab fa-github" style="color: white;"></i> Repository</a>
                   </div>
                 </div>
               </div>
             </div>
           </div> 
+
+          <div class="portfolio-container">
+            <img src="assets/port03.png" class="porfolio-image">
+            <div class="portfolio-description">
+              <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">Face Tracking</h5></div>
+              <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Python - OpenCV</p></div>
+              <div class="portfolio-description-links">
+                <div style="width: 100%;">
+                  <div class="portfolio-description-button-container">
+                    <a href="https://github.com/pccastros/opencv-face-tracking.git" target="_blank" class="portfolio-description-buttons"><i class="fab fa-github" style="color: white;"></i> Repository</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> 
+
+          <div class="portfolio-container">
+            <img src="assets/port04.png" class="porfolio-image">
+            <div class="portfolio-description">
+              <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">Python CRUD</h5></div>
+              <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Flask - Docker - PostgreSQL</p></div>
+              <div class="portfolio-description-links">
+                <div style="width: 100%;">
+                  <div class="portfolio-description-button-container">
+                    <a href="https://github.com/pccastros/flask-postgres-docker.git" target="_blank" class="portfolio-description-buttons"><i class="fab fa-github" style="color: white;"></i> Repository</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> 
+
+          <div class="portfolio-container">
+            <img src="assets/port05.png" class="porfolio-image">
+            <div class="portfolio-description">
+              <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">Ecommerce</h5></div>
+              <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Angular - Flask</p></div>
+              <div class="portfolio-description-links">
+                <div style="width: 100%;">
+                  <div class="portfolio-description-button-container">
+                    <a href="https://github.com/pccastros/angular-flask-ecommerce.git" target="_blank" class="portfolio-description-buttons"><i class="fab fa-github" style="color: white;"></i> Repository</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> 
+
+          <div class="portfolio-container">
+            <img src="assets/port06.png" class="porfolio-image">
+            <div class="portfolio-description">
+              <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">Geospatial Data</h5></div>
+              <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Python - Pandas - Folium</p></div>
+              <div class="portfolio-description-links">
+                <div style="width: 100%;">
+                  <div class="portfolio-description-button-container">
+                    <a href="https://github.com/pccastros/GeospatialDataAndHistogram.git" target="_blank" class="portfolio-description-buttons"><i class="fab fa-github" style="color: white;"></i> Repository</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> 
+
          
+
         </div>
 
         <div class="portfolio-text">
           <h5>You can see all my projects in 
-            <a href="https://www.linkedin.com/in/patricio-castro-61a154168" target="_blank" rel="noopener noreferrer" style="text-decoration: none !important;">Github</a>
+            <a href="https://github.com/pccastros" target="_blank" rel="noopener noreferrer" style="text-decoration: none !important;">Github</a>
           </h5>
         </div>
 
