--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
         <div class="portfolio-column">
 
           <div class="portfolio-container">
+            <div><img src="assets/port07.png" class="porfolio-image"></div>
+            <div class="portfolio-description">
+              <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">C-Commerce</h5></div>
+              <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Python - Angular</p></div>
+              <div class="portfolio-description-links">
+                <div style="width: 100%;">
+                  <div class="portfolio-description-button-container">
+                    <a href="https://youtu.be/YydyCG1zb2Q" target="_blank" class="portfolio-description-buttons"><i class="fab fa-youtube"></i> Youtube</a>
+                  </div>
+                </div>
+              </div>
+            </div>        
+          </div>
+
+          <div class="portfolio-container">
             <div><img src="assets/port01.png" class="porfolio-image"></div>
             <div class="portfolio-description">
               <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">Virtual Laser Shooting Range</h5></div>
