--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/cfcc17eee9.js" crossorigin="anonymous"></script>
 
-    <title>PC | Full Stack</title>
+    <title>Patricio Castro</title>
     <link rel="shortcut icon" type="image/jpg" href="assets/logo.png"/>
 
   </head>
