--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div>
         <span class="home-text">I'm</span>
         <h1 class="home-text-name">Patricio Castro</h1>
-        <span class="home-text">Backend Developer</span>
+        <span class="home-text">Software Developer</span>
       </div>
     </section>
 
@@ -68,7 +68,10 @@
               <h2><b>Who am I?</b></h2>
             </div>
             <p class="about-description">
-              I am a backend developer with 4+ years of experience designing and developing different types of solutions. I professionally specialize in Python and JavaScript, additionally I use Cloud services to deploy my projects and perform data engineering.
+              <!--
+                I am a backend developer with 4+ years of experience designing and developing different types of solutions. I professionally specialize in Python and JavaScript, additionally I use Cloud services to deploy my projects and perform data engineering.
+              -->
+              Software developer with 4+ years of experience designing and developing different types of tech solutions using Python, JavaScript and Cloud Computing for deploying projects, implementing microservices and Rest APIs and performing data engineering.  I am a technology enthusiast and self-taught constantly looking for new challenges aiming to contribute to building world-class software solutions.
             </p>
           </div>
           
@@ -118,7 +121,7 @@
             <div><img src="assets/port07.png" class="porfolio-image"></div>
             <div class="portfolio-description">
               <div class="portfolio-description-content"><h5 style="display: table-cell; vertical-align: middle;">C-Commerce</h5></div>
-              <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Python - Angular</p></div>
+              <div class="portfolio-description-content"><p style="display: table-cell; vertical-align: top;">Flask - Angular</p></div>
               <div class="portfolio-description-links">
                 <div style="width: 100%;">
                   <div class="portfolio-description-button-container">
